--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+body{
+  margin: 0;
+}
 #employees {
   max-height: 440px;
 }
@@ -7,9 +10,6 @@
 }
 
 .options {
-  margin-top: 20px;
-  padding: 20px;
-  background-color: rgba(191, 191, 191, 0.15);
   position: relative;
   border: "2px solid red";
 }
@@ -32,4 +32,21 @@
 .options-container {
   display: flex;
   align-items: center;
+}
+.banner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 40px 20px;
+  background-image: linear-gradient(120deg, #e0c3fc 0%, #8ec5fc 100%);
+  border-radius:  0  0 20px 20px; 
+  margin-bottom: 20px;
+}
+.dx-treelist-headers.dx-treelist-nowrap.dx-bordered-top-view {
+background-color: #dfdfdf;
+  color: #000;
+  /* padding: 0px; */
+}
+td.dx-treelist-cell-expandable , td#dx-col-7{
+  padding: 10px !important;
 }
